--- a/css/style.css
+++ b/css/style.css
@@ -4,161 +4,90 @@
     padding: 0;
     margin: 0;
     bottom: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-
 }
 
 body {
-    background-color: #1e1e1e;
+    background-color: #F4E8D0;
     overflow: hidden;
-    color: #1e1e1e;
-}
-
-.link {
-    color: #ffff;
-    font-weight: 700;
-    font-size: 24px;
 }
 
 .container {
-    max-width: 1380px;
-    margin: 0 auto;
-    /* position: absolute;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
     width: 1000px;
-    height: 600px;
-     */
+    margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
 }
 
-#slide {
-    width: max-content;
-    margin-top: 50px;
-    width: 100;
-
+.link {
+    color: black;
 }
 
-.item {
-    width: 300px;
-    height: 500px;
-    background-position: 35% 50%;
-    display: inline-block;
-    transition: .5s;
-    background-size: cover;
+/* .news {
+    display: grid;
+    gap: 20px;
+    padding: 20px;
+}
+
+.news_card {
+    border: 2px solid #000000;
+    border-radius: 15px;
+    padding: 20px;
+} */
+.qw_ans {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+}
+
+.content {
+    margin: 50px;
+}
+
+.accord {
+    background-color: #EDC4A0;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.btn {
+    padding: 10px;
+    border: 1px solid #B29C62;
+    background-color: #B29C62;
+    border-radius: 8px;
+    color: #fff;
+    position: relative;
+}
+
+.answer {
+    /* max-height: 0;
+    overflow: hidden; */
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    transition: .2s;
+    overflow-y: auto;
+}
+
+.accord.active .answer {
+    height: min-content;
+    padding: 10px;
+}
+
+.content .accord .btn::before {
+    content: "+";
     position: absolute;
-    z-index: 1;
     top: 50%;
-    transform: translate(0, -50%);
-    border-radius: 20px;
-    box-shadow: 0 15px 30px #1e1e1e64;
+    transform: translateY(-50%);
+    right: 5%;
+    font-weight: 600;
+    font-size: 20px;
+
 }
 
-.item:nth-child(1),
-.item:nth-child(2) {
-    left: 0;
-    top: 0;
-    transform: translate(0, 0);
-    border-radius: 0;
+.content .accord.active .btn::before {
+    content: "-";
+}
+
+.img {
     width: 100%;
-    height: 100%;
-    box-shadow: none;
-}
-
-.item:nth-child(3) {
-    left: 50%;
-}
-
-.item:nth-child(4) {
-    left: 72%;
-}
-
-.item:nth-child(5) {
-    left: 94%;
-}
-
-.item:nth-child(n+6) {
-    left: 116%;
-    opacity: 0;
-}
-
-.item .content {
-    position: absolute;
-    top: 60%;
-    left: 100px;
-    width: 300px;
-    text-align: left;
-    padding: 0;
-    color: #f5f5f5;
-    transform: translate(0, -50%);
-    display: none;
-}
-
-
-.item:nth-child(2) .content {
-    display: block;
-    z-index: 11111;
-}
-
-
-.item h1 {
-    font-family: system-ui;
-    font-size: 40px;
-    font-weight: 700;
-    opacity: 0;
-    animation: showContent 1s ease-in-out 1 forwards;
-}
-
-.item .text {
-    margin: 20px 0;
-    opacity: 0;
-    animation: showContent 1s ease-in-out 0.3s 1 forwards;
-}
-
-.item button {
-    padding: 10px 20px;
-    border: none;
-    opacity: 0;
-    animation: showContent 1s ease-in-out 0.6s 1 forwards;
-}
-
-
-@keyframes showContent {
-    from {
-        opacity: 0;
-        transform: translate(0, 100px);
-        filter: blur(8px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translate(0, 0);
-        filter: blur(0);
-    }
-}
-
-
-.buttons {
-    position: absolute;
-    bottom: 30px;
-    z-index: 22222;
-    text-align: center;
-    width: 100%;
-    right: 2%;
-}
-
-.buttons button {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    color: #1e1e1e;
-    transition: .5s;
-
-}
-
-.buttons button:hover {
-    background-color: #1e1e1e;
-    color: #f5f5f5;
 }
